--- a/Meditation/View/Base.lproj/Main.storyboard
+++ b/Meditation/View/Base.lproj/Main.storyboard
@@ -210,6 +210,9 @@
                                 <state key="normal" title="Войти">
                                     <color key="titleColor" name="White"/>
                                 </state>
+                                <connections>
+                                    <segue destination="yrw-zK-aEF" kind="show" id="8Mp-iO-lV9"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jGz-T3-k5C"/>
@@ -224,7 +227,7 @@
         <!--View Controller-->
         <scene sceneID="RAt-fj-uN3">
             <objects>
-                <viewController id="yrw-zK-aEF" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="yrw-zK-aEF" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bHs-Un-4O7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -255,10 +258,41 @@
                                 <color key="textColor" name="White"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eCl-8G-OtJ" customClass="MyButton" customModule="Meditation" customModuleProvider="target">
+                                <rect key="frame" x="20" y="226" width="62" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Calm"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZIY-9k-wfi" customClass="MyButton" customModule="Meditation" customModuleProvider="target">
+                                <rect key="frame" x="112" y="226" width="62" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Relax"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iRp-09-ccP" customClass="MyButton" customModule="Meditation" customModuleProvider="target">
+                                <rect key="frame" x="204" y="227" width="62" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Focus"/>
+                            </button>
+                            <button opaque="NO" contentMode="bottom" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hz0-05-sCT" customClass="MyButton" customModule="Meditation" customModuleProvider="target">
+                                <rect key="frame" x="294" y="226" width="62" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Anxious">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="17" scale="default"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Yn1-42-laJ"/>
                         <color key="backgroundColor" name="DarkGreen"/>
                     </view>
+                    <navigationItem key="navigationItem" id="tiv-Nx-6ZG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7tu-OT-eyk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -290,11 +324,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Anxious" width="38" height="72"/>
         <image name="Background" width="375" height="812"/>
+        <image name="Calm" width="36" height="35"/>
         <image name="Flowers" width="375" height="224"/>
+        <image name="Focus" width="35" height="35"/>
         <image name="Hamburger" width="23.5" height="18"/>
         <image name="LogoMeditation" width="375" height="453"/>
         <image name="Profile" width="150" height="150"/>
+        <image name="Relax" width="35" height="33"/>
         <image name="Vector" width="306" height="2"/>
         <namedColor name="DarkGreen">
             <color red="0.14499999582767487" green="0.20000000298023224" blue="0.20399999618530273" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
